Formatted the Page Layout I formatted the Page so that the divs are on the right place of the board. I tried my best to put Navigation Bar and footer at the respective places, but it didn't work. I did what I could best. I tried to use margin: 100px auto to center the game board and the buttons and it didn't work. I searched on StackOverFlow and BootStrap Doc for different ways, but it didn't work. I used margin-left 26.3% instead. I'll come fix this issue later because this website will be easy to break.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -6,4 +6,25 @@
 
 // line width, don't squeeze too much characters into a line
 body {
+  background-color: silver;
+  text-align: center;
+}
+
+.box {
+  border: 1px solid black;
+}
+
+.navBar {
+  margin-bottom: 100px;
+  width: 100%;
+}
+
+.gameboard {
+  margin-left: 26.3%;
+}
+
+.gameButtons {
+  margin-bottom: 20px;
+  margin-left: 26.3%;
+
 }
